2005-08-15  Till Kamppeter <till.kamppeter@gmx.net>

	* beh.in, configure.in, Makefile.in: Added the "beh" (Backend
	  Error Handler) CUPS backend. With this the handling of errors
	  of the CUPS backends (printer communication errors, like
	  printer not turned on) can be configured, instead of CUPS
	  simply disabling the print queue.

2005-07-29  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Added substitution of special XML entities by
	  job data, as date, time, job ID, user name, ... (in function
	  "unhtmlify()"). This was suggested by George Liu from Ricoh
	  (george dot liu at ussj dot ricoh dot com), to support jobs
	  with submission of login/password to the printer.

2005-07-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in, foomatic-gswrapper.in: Fix for the fix on the
	  regexp for reading the config file (Thanks to Hans-Dieter Kosch,
	  hdkosch at t-online dot de, for this fix).

2005-07-18  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: In quiet mode (non-logging mode) $logh is
	  closed in the beginning but was never opened (Thanks to
	  Hans-Dieter Kosch, hdkosch at t-online dot de, for this fix).

	* foomatic-gswrapper.in: Fixed quoting of single quotes (Thanks to
	  Hans-Dieter Kosch, hdkosch at t-online dot de, for this fix).

	* foomatic-rip.in, foomatic-gswrapper.in: Fixed regexp for reading
	  the config file (Thanks to Hans-Dieter Kosch, hdkosch at
	  t-online dot de, for this fix).

2005-05-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Make EPSF files not be an exception when
	  checking whether the input file is DSC-conforming. They can also
	  be DSC-conforming (thanks to Kevin ODonovan, kevin dot odonovan
	  at nist dot gov, for his report); Let the "FontPath" defined in
	  /etc/cups/cupsd.conf being used when CUPS is the spooler
	  (thanks to Peter Kekesi, kekpeti at freemail dot hu, for his
	  report).

2005-05-11  Till Kamppeter <till.kamppeter@gmx.net>
